Updated Backend: Maui (markdown)